--- a/public/css/style.css
+++ b/public/css/style.css
@@ -116,3 +116,16 @@ body {
     height: 400px;
     width: 80vh;
 }
+
+#marker {
+    background-image: url('/images/map-pointer.jpg');  
+    background-size: cover;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.mapboxgl-Popup {
+    max-width: 200px;
+}
