--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,23 +27,25 @@ body {
 /* Footer */
 .f-info-links a {
     text-decoration: none;
-    color:#222222;
+    color: #222222;
 }
 
 .f-info-links a:hover {
     text-decoration: underline;
 }
 
-.f-info-links, .f-info-socials, .f-info-brand  {
+.f-info-links,
+.f-info-socials,
+.f-info-brand {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-    
+
 }
 
 .f-info-socials i {
-    font-size: 1.2rem; 
+    font-size: 1.2rem;
     margin-right: 1rem;
 
 }
@@ -86,14 +88,52 @@ body {
 .card-img-overlay {
     opacity: 0;
 }
+
 .card-img-overlay:hover {
     opacity: 0.2;
     background-color: white;
 }
 
 .add-btn {
-    background-color:#fe424d ;
+    background-color: #fe424d;
     border: none;
+}
+
+/* index page */
+#filters {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.filter {
+    text-align: center;
+    margin-right: 2rem;
+    margin-top: 2rem;
+    opacity: 0.8;
+}
+
+.filter:hover {
+    opacity: 1;
+    cursor: pointer;
+}
+
+.filter p {
+    font-size: 0.8rem;
+}
+
+.tax-info {
+    display: none;
+}
+
+.tax-toggle {
+    border: 1px solid black;
+    border-radius: 1rem;
+    height: 3.25rem;
+    padding: 1rem;
+    display: flex;
+    align-items: center;
+    margin-left: auto;
 }
 
 /* Show page */
@@ -102,7 +142,7 @@ body {
 }
 
 .btns {
-    display: flex; 
+    display: flex;
 }
 
 .show-card {
@@ -118,7 +158,7 @@ body {
 }
 
 #marker {
-    background-image: url('/images/map-pointer.jpg');  
+    background-image: url('/images/map-pointer.jpg');
     background-size: cover;
     width: 40px;
     height: 40px;
