--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,8 +1,66 @@
 <%- layout("/layouts/boilerplate") %>
 
-<h3>All Listings</h3>
+<div id="filters">
+  <div class="filter">
+    <div><i class="fa-solid fa-fire"></i></div>
+    <p>Trending</p>
+  </div>
+  <div class="filter">
+    <div><i class="fa-solid fa-gem"></i></div>
+    <p>Luex</p>
+  </div>
+  <div class="filter">
+    <div><i class="fa-solid fa-city"></i></div>
+    <p>Iconic Cities</p>
+  </div>
+  <div class="filter">
+    <div><i class="fa-solid fa-mountain-sun"></i></div>
+    <p>Mountains</p>
+  </div>
+  <div class="filter">
+    <div><i class="fa-brands fa-fort-awesome"></i></div>
+    <p>Castles</p>
+  </div>
+  <div class="filter">
+    <div><i class="fa-solid fa-water-ladder"></i></div>
+    <p>Amazing Pools</p>
+  </div>
+  <div class="filter">
+    <div><i class="fa-solid fa-campground"></i></div>
+    <p>Camping</p>
+  </div>
+  <div class="filter">
+    <div><i class="fa-solid fa-tractor"></i></div>
+    <p>Farms</p>
+  </div>
+  <div class="filter">
+    <div><i class="fa-solid fa-person-skiing"></i></div>
+    <p>Arctic</p>
+  </div>
+  <!-- <div class="filter">
+    <div><i class="fa-solid fa-umbrella-beach"></i></div>
+    <p>Beach</p>
+  </div>
+  <div class="filter">
+    <div><i class="fa-solid fa-tower-observation"></i></div>
+    <p>Tower</p>
+  </div>
+  <div class="filter">
+    <div><i class="fa-solid fa-palette"></i></div>
+    <p>Creative</p>
+  </div> -->
 
-<div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
+  <div class="tax-toggle">
+    <div class="form-check-reverse form-switch">
+      <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+      <label class="form-check-label" for="flexSwitchCheckDefault">Display total after taxes</label>
+    </div>
+  </div>
+
+
+</div>
+
+<div class="row row-cols-lg-3 row-cols-md-1 row-cols-sm-1 mt-3">
   <% for(let listing of allListings) { %>
   <a href="/listings/<%= listing._id %>" class="listing-link">
     <div class="card col listing-card">
@@ -14,17 +72,26 @@
             <%= listing.title %>
           </b>
           <br>
-          &#8377;
-          <% if (listing.price) { %>
-          <%= listing.price.toLocaleString("en-IN") %>
-          <% } else { %>
-          Price not available
-          <% } %>
-          / night
+          &#8377; <%= listing.price.toLocaleString("en-IN") %> /night
+          <i class="tax-info">&nbsp; &nbsp; +18% GST</i>
         </p>
       </div>
     </div>
   </a>
   <% } %>
-
 </div>
+
+
+<script>
+  let taxSwitch = document.getElementById("flexSwitchCheckDefault");
+  taxSwitch.addEventListener("click", () => {
+    let taxInfo = document.getElementsByClassName("tax-info");
+    for (info of taxInfo) {
+      if (info.style.display != "inline") {
+        info.style.display = "inline";
+      } else {
+        info.style.display = "none";
+      }
+    }
+  });
+</script>
