--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,6 +24,53 @@ body {
     color: #222222 !important;
 }
 
+
+.src-dropdown {
+    height: 50%;
+    border-radius: 25px;
+    background-color: #fff;
+    border: none;
+}
+
+.src-dropdown {
+    height: 50%;
+    border-radius: 25px;
+    background-color: #f3e8e8;
+    border: none;
+}
+
+.dropdown-menu {
+    width: 100%;
+    max-height: 200px;
+    overflow-y: auto;
+    margin-top: -5px;
+}
+
+.form-control {
+    border-radius: 25px 0 0 25px;
+    border: none;
+}
+
+.form-control:focus {
+    box-shadow: none;
+}
+
+.search-btn {
+    border-radius: 0 25px 25px 0;
+    background-color: #fe424d;
+    color: #fff;
+    border: none;
+}
+
+.search-btn:hover {
+    background-color: #fe424d;
+    color: #fff;
+}
+
+.dropdown-item:hover {
+    background-color: #f0f0f0;
+}
+
 /* Footer */
 .f-info-links a {
     text-decoration: none;
