--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,27 +1,3 @@
-<style>
-  .search-btn {
-    background-color: #fe424d;
-    color: #fff;
-    border-radius: 25px;
-    padding: 0 1rem 0 1rem;
-  }
-
-  .search-btn:hover {
-    background-color: #fe424d;
-    color: #fff;
-  }
-
-  .search-btn i {
-    display: inline;
-    margin-right: 0.5rem;
-  }
-
-  .search-inp {
-    border-radius: 25px;
-    padding: 0.5rem 3rem 0.5rem 3rem;
-  }
-</style>
-
 <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="/listings"><i class="fa-solid fa-compass"></i></a>
@@ -34,14 +10,45 @@
       </div>
 
       <div class="navbar-nav ms-auto">
-        <form class="d-flex" role="search">
-          <input class="form-control me-2 search-inp" type="search" placeholder="Search destinations">
-          <button class="search-btn" type="submit"><i class="fa-solid fa-magnifying-glass"></i>Search</button>
+        <form class="d-flex" role="search" method="">
+          <div class="input-group">
+            <input class="form-control search-inp dropdown-toggle" type="search" placeholder="Search destinations" aria-label="Search" id="searchDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+            <ul class="dropdown-menu" aria-labelledby="searchDropdown">
+              <li><a class="dropdown-item" href="#">Argentina</a></li>
+              <li><a class="dropdown-item" href="#">Australia</a></li>
+              <li><a class="dropdown-item" href="#">Brazil</a></li>
+              <li><a class="dropdown-item" href="#">Canada</a></li>
+              <li><a class="dropdown-item" href="#">China</a></li>
+              <li><a class="dropdown-item" href="#">France</a></li>
+              <li><a class="dropdown-item" href="#">Fiji</a></li>
+              <li><a class="dropdown-item" href="#">Germany</a></li>
+              <li><a class="dropdown-item" href="#">India</a></li>
+              <li><a class="dropdown-item" href="#">Indonesia</a></li>
+              <li><a class="dropdown-item" href="#">Italy</a></li>
+              <li><a class="dropdown-item" href="#">Japan</a></li>
+              <li><a class="dropdown-item" href="#">Mexico</a></li>
+              <li><a class="dropdown-item" href="#">Nigeria</a></li>
+              <li><a class="dropdown-item" href="#">Netherlands</a></li>
+              <li><a class="dropdown-item" href="#">Pakistan</a></li>
+              <li><a class="dropdown-item" href="#">Russia</a></li>
+              <li><a class="dropdown-item" href="#">Saudi Arabia</a></li>
+              <li><a class="dropdown-item" href="#">South Africa</a></li>
+              <li><a class="dropdown-item" href="#">South Korea</a></li>
+              <li><a class="dropdown-item" href="#">Spain</a></li>
+              <li><a class="dropdown-item" href="#">Switzerland</a></li>
+              <li><a class="dropdown-item" href="#">Turkey</a></li>
+              <li><a class="dropdown-item" href="#">UAE</a></li>
+              <li><a class="dropdown-item" href="#">United Kingdom</a></li>
+              <li><a class="dropdown-item" href="#">United States</a></li>
+            </ul>
+
+            <button class="btn search-btn" type="submit"><i class="fa-solid fa-magnifying-glass"></i> Search</button>
+          </div>
         </form>
       </div>
 
       <div class="navbar-nav ms-auto">
-        <a class="nav-link" href="/listings/new">Airbnb your home</a>
+        <a class="nav-link" href="/listings/new">List your home</a>
         <% if (!currentUser) { %>
         <a class="nav-link" aria-current="page" href="/signup"><b>Sing up</b></a>
         <a class="nav-link" href="/login"><b>Log in</b></a>
@@ -52,3 +59,20 @@
     </div>
   </div>
 </nav>
+
+<script>
+  document.addEventListener("DOMContentLoaded", function() {
+    const dropdownItems = document.querySelectorAll(".dropdown-item");
+    const searchInput = document.querySelector(".search-inp");
+
+    //adding dropdown text to search-inp
+    dropdownItems.forEach(item => {
+      item.addEventListener("click", function(e) {
+        e.preventDefault();
+        searchInput.value = this.textContent;
+      });
+    });
+  });
+</script>
+
+<!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script> -->
