--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <%- include("../includes/navbar.ejs") %>
+  <%- include("../includes/navbar/navbar.ejs") %>
   <div class="container">
     <%- include("../includes/flash.ejs") %>
     <%- body %>
