--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -18,4 +18,7 @@
       <button class="btn btn-success">Login</button>
     </form>
   </div>
+  <div>
+    <a href="./signup.ejs">Sign up</a>
+  </div>
 </div>
