--- a/views/includes/navbar/navSearch.ejs
+++ b/views/includes/navbar/navSearch.ejs
@@ -11,10 +11,11 @@
     </datalist>
     <input class="src-options h-100 w-50" type="text" placeholder="Check in" onfocus="(this.type='date')" onblur="(this.type='text')">
     <input class="src-options h-100 w-50" type="text" placeholder="Check out" onfocus="(this.type='date')" onblur="(this.type='text')">
-    <input class="src-options h-100 w-100" type="text" placeholder="Add number guests" >
+    <input class="src-options h-100 w-100" type="text" placeholder="Add guests" >
 
-    <button class="btn src-btn h-100 px-3 border-0 rounded-circle" type="submit">
-      <i class="fa-solid fa-magnifying-glass"></i>
+    <button class="btn src-btn px-3 py-2 m-2 border-0 d-flex aling-item-center " type="submit">
+        <i class="fa-solid fa-magnifying-glass"></i>
+        <b class="src-text">Search</b>
     </button>
   </form>
 </div>
