--- a/views/includes/filters.ejs
+++ b/views/includes/filters.ejs
@@ -5,6 +5,8 @@
     white-space: nowrap;
     scroll-behavior: smooth;
     position: relative;
+    box-shadow: inset 3px 0 6px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
   }
 
   .filter-item {
