--- a/views/includes/navbar/navbar.ejs
+++ b/views/includes/navbar/navbar.ejs
@@ -1,11 +1,12 @@
-<link rel="stylesheet" href="/css/nav.css">
-
 <nav class="navbar border-bottom sticky-top p-0">
   <div class="container-fluid">
     <div class="d-flex flex-wrap align-items-start w-100 mt-0">
       <!-- Brand Image -->
-      <a class="navbar-brand mx-3 flex-wrap" href="/listings">
-        <i class="fa-solid fa-compass"></i>
+      <a class="navbar-brand mx-2" href="/listings">
+        <img id="brand-img" src="/images/logo.png">
+      </a>
+      <a class="navbar-brand mx-2" href="/listings">
+        <img id="brand-name" src="/images/logo name.jpeg">
       </a>
 
       <!-- Nav Options -->
@@ -13,8 +14,7 @@
         <a class="nav-link mx-2" href="/listings/new">
           <b>List your home</b>
         </a>
-
-        <a class="nav-link mx-3" href="/listings">
+        <a class="nav-link px-2 mx-3" id="nav-globe" href="/listings">
           <i class="fa-solid fa-globe"></i>
         </a>
 
@@ -51,5 +51,4 @@
 </nav>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
