--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -1,14 +1,36 @@
 .navbar {
   height: 7.5rem;
   background-color: rgb(247, 247, 247);
+  box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.2);
 }
-.fa-compass {
-  color: #fe424d;
-  font-size: 2rem;
+
+.navbar-brand {
+  object-fit: cover;
 }
+#brand-img {
+  height: 40px;
+  border-radius: 50%;
+}
+#brand-name {
+  width: 140px;
+  height: 40px
+}
+
+#brand-img:hover {
+  animation: rotate 2s forwards;
+}
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(-90deg);
+  }
+}
+
 .nav-link {
   color: #222222 !important;
-  /* font-size: medium; */
+  border-radius: 25px;
 }
 .dropdown-toggle {
   box-shadow: 1px 1px 3px rgb(146, 145, 145);
@@ -25,7 +47,6 @@
 }
 
 /* Nav search */
-
 .src-bar {
   height: 50px;
   max-width: 750px;
@@ -53,7 +74,7 @@
   outline: none;
   box-shadow: none;
 }
-.src-options:hover {
+.src-options:hover, .nav-link:hover {
   background-color: rgb(230, 222, 222);
 }
 
@@ -81,7 +102,10 @@
   display: block;
 }
 
-@media (max-width: 544px) {
+@media (max-width: 570px) {
+  #brand-name {
+    display: none;
+  }
   .src {
     width: 100%;
     font-size: xx-small;
@@ -89,5 +113,8 @@
   .src input {
     width: 100%;
     height: 25px;
+  }
+  #nav-globe {
+    display: none;
   }
 }
