--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,5 +1,19 @@
 <%- layout("/layouts/boilerplate") %>
 
+<style>
+ #edit-original-img {
+    width: 100%; 
+    max-width: 500px; 
+  }
+
+  @media (max-width: 700px) {
+    #edit-original-img {
+      width: 80%; 
+      max-width: 300px; 
+    }
+  }
+</style>
+
 <br>
 <div class="row">
   <div class="col-8 offset-2">
@@ -22,7 +36,7 @@
 
       <div class="mb-3">
         Original Listing Image <br>
-        <img src="<%= originalImgUrl %>">
+        <img id="edit-original-img" src="<%= originalImgUrl %>">
       </div>
 
       <div class="mb-3">
@@ -39,20 +53,17 @@
       </div>
       <br>
 
-      <div class="row">
-        <div class="mb-3 col-4">
-          <label for="location" class="form-label">Location:</label>
-          <input name="listing[location]" type="text" value="<%= listing.location %>" class="form-control" required>
-          <div class="invalid-feedback">Enter a valid location</div>
-        </div>
-        <br>
+      <div class="mb-3">
+        <label for="location" class="form-label">Location:</label>
+        <input name="listing[location]" type="text" value="<%= listing.location %>" class="form-control" required>
+        <div class="invalid-feedback">Enter a valid location</div>
+      </div>
+      <br>
 
-        <div class="mb-3 col-7">
-          <label for="country" class="form-label">Country:</label>
-          <input name="listing[country]" type="text" value="<%= listing.country %>" class="form-control" required>
-          <div class="invalid-feedback">Enter a valid country name</div>
-        </div>
-        <br>
+      <div class="mb-3">
+        <label for="country" class="form-label">Country:</label>
+        <input name="listing[country]" type="text" value="<%= listing.country %>" class="form-control" required>
+        <div class="invalid-feedback">Enter a valid country name</div>
       </div>
 
       <button type="submit" class="btn btn-dark add-btn mt-3">Update</button>
