--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,9 +1,15 @@
 <%- layout("/layouts/boilerplate") %>
 
+<style>
+.form-control {
+  box-shadow: 0 0 3px black;
+}
+</style>
 
-<div class="row mt-3">
+<div class="row mt-5 ">
   <div class="col-6 offset-3">
-    <h1>Login</h1>
+    <h1 class="border-bottom py-1">Login</h1>
+
     <form action="/login" method="POST" class="needs-validation" novalidate>
       <div class="mb-3">
         <label for="username" class="form-lable">Username</label>
@@ -15,10 +21,7 @@
         <input name="password" id="password" type="password" class="form-control" required>
       </div>
 
-      <button class="btn btn-success">Login</button>
+      <button class="btn add-btn">Login</button>
     </form>
-  </div>
-  <div>
-    <a href="./signup.ejs">Sign up</a>
   </div>
 </div>
