--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -1,9 +1,17 @@
 <%- layout("/layouts/boilerplate") %>
 
 
+<style>
+  .form-control {
+    box-shadow: 0 0 3px black;
+  }
+</style>
+
+
 <div class="row mt-3">
-  <div class="col-6 offset-3">
-    <h1>SignUp for Wanderlust</h1>
+  <div class="col-6 offset-3 box">
+    <h1 class="border-bottom p-1">SignUp</h1>
+
     <form action="/signup" method="POST" class="needs-validation" novalidate>
       <div class="mb-3">
         <label for="username" class="form-lable">Username</label>
@@ -21,7 +29,7 @@
         <input name="password" id="password" type="password" class="form-control" required>
       </div>
 
-      <button class="btn btn-success">SignUp</button>
+      <button class="btn add-btn">SignUp</button>
     </form>
   </div>
 </div>
