--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,14 +1,16 @@
 <footer>
   <div class="f-info">
     <div class="f-info-socials">
-      <i class="fa-brands fa-facebook"></i>
-      <i class="fa-brands fa-square-instagram"></i>
-      <i class="fa-brands fa-square-x-twitter"></i>
+      <a class="fa-brands" href="https://www.facebook.com/share/1bdNSrSYX7AK186R/?mibextid=qi2Omg"><i class="fa-brands fa-facebook"></i></a>
+      <a class="fa-brands" href="https://www.instagram.com/itsmeanuj04?igsh=MTlmNDczZHppbGZzaA=="><i class="fa-brands fa-square-instagram"></i></a>
+      <a class="fa-brands" href="https://x.com/CodingAJ?t=Va_FfVYYmcq0dj4nVZcJPg&s=08"><i class="fa-brands fa-square-x-twitter"></i></a>
+      
+      
     </div>
     <div class="f-info-brand">&copy; Wanderlust Private Limited</div>
     <div class="f-info-links">
-      <a href="/privacy">Privacy</a>
-      <a href="/terms">Terms</a>
+      <a href="#" class="mx-2">Privacy</a>
+      <a href="#">Terms</a>
     </div>
 
   </div>
