--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,20 +1,5 @@
 <%- layout("/layouts/boilerplate") %>
 
-<style>
- #edit-original-img {
-    width: 100%; 
-    max-width: 500px; 
-  }
-
-  @media (max-width: 700px) {
-    #edit-original-img {
-      width: 80%; 
-      max-width: 300px; 
-    }
-  }
-</style>
-
-<br>
 <div class="row">
   <div class="col-8 offset-2">
     <h3>Edit your listing</h3>
@@ -25,49 +10,85 @@
         <input name="listing[title]" type="text" value="<%= listing.title %>" class="form-control" required>
         <div class="invalid-feedback">Enter a valid title</div>
       </div>
-      <br>
 
-      <div class="mb-3">
-        <label for="description" class="form-label">Description:</label>
-        <textarea name="listing[description]" class="form-control" required><%= listing.description %></textarea>
+      <div class="mb-2">
+        <label for="exampleFormControlTextarea1">Description</label>
+        <textarea name="listing[description]" class="form-control" id="exampleFormControlTextarea1" placeholder="enter description" rows="3" required><%= listing.description %></textarea>
         <div class="invalid-feedback">Enter a valid description</div>
       </div>
-      <br>
 
-      <div class="mb-3">
+      <div class="mb-2">
         Original Listing Image <br>
         <img id="edit-original-img" src="<%= originalImgUrl %>">
       </div>
 
-      <div class="mb-3">
+      <div class="mb-2">
         <label for="image" class="form-label">Upload New Image:</label>
         <input name="listing[image]" type="file" class="form-control">
         <div class="invalid-feedback">Enter a valid image url</div>
       </div>
-      <br>
 
-      <div class="mb-3">
+      <div class="mb-2">
         <label for="price" class="form-label">Price:</label>
         <input name="listing[price]" type="number" value="<%= listing.price %>" class="form-control" required>
         <div class="invalid-feedback">Enter a valid price</div>
       </div>
-      <br>
 
-      <div class="mb-3">
+      <div class="mb-2">
         <label for="location" class="form-label">Location:</label>
         <input name="listing[location]" type="text" value="<%= listing.location %>" class="form-control" required>
         <div class="invalid-feedback">Enter a valid location</div>
       </div>
-      <br>
-
-      <div class="mb-3">
+      
+      <div class="mb-2">
         <label for="country" class="form-label">Country:</label>
         <input name="listing[country]" type="text" value="<%= listing.country %>" class="form-control" required>
         <div class="invalid-feedback">Enter a valid country name</div>
       </div>
 
-      <button type="submit" class="btn btn-dark add-btn mt-3">Update</button>
-      <br><br>
+      <div class="mb-2">
+        <label for="region" class="form-label">Region</label><br>
+        <select name="listing[region]" class="custom-select form-control border" id="inputGroupSelect01" required>
+          <option selected></option>
+          <option value="europe">Europe</option>
+          <option value="north america">North America</option>
+          <option value="southeast asia">Southeast Asia</option>
+          <option value="east asia">East Asia</option>
+          <option value="south america">South America</option>
+          <option value="middle east">Middle East</option>
+        </select>
+        <div class="invalid-feedback">Please select a option</div>
+      </div>
+
+      <div class="mb-2">
+        <div class="form-group">
+          <label class="mb-1">Categories</label>
+          <div class="form-control filter-categories row d-flex">
+            <div class="col-6 filter-categories-inpt1">
+              <label class="d-block"><input type="checkbox" name="listing[categories]" value="amazing pools"> Amazing Pools</label>
+              <label class="d-block"><input type="checkbox" name="listing[categories]" value="camping"> Camping</label>
+              <label class="d-block"><input type="checkbox" name="listing[categories]" value="iconic cities"> Iconic Cities</label>
+              <label class="d-block"><input type="checkbox" name="listing[categories]" value="mountains"> Mountains</label>
+              <label class="d-block"><input type="checkbox" name="listing[categories]" value="castles"> Castles</label>
+              <label class="d-block"><input type="checkbox" name="listing[categories]" value="trending"> Trending</label>
+              <label class="d-block"><input type="checkbox" name="listing[categories]" value="luxury"> Luex</label>
+              <label class="d-block"><input type="checkbox" name="listing[categories]" value="farms"> Farms</label>
+              <label class="d-block"><input type="checkbox" name="listing[categories]" value="ski-in/out"> Ski-in/out</label>
+            </div>
+            <div class="col-6 filter-listing[categories]-inpt2">
+              <label class="d-block"><input type="checkbox" name="listing[categories]" value="beach"> Beach</label>
+              <label class="d-block"><input type="checkbox" name="listing[categories]" value="tower"> Tower</label>
+              <label class="d-block"><input type="checkbox" name="listing[categories]" value="creative"> Creative</label>
+              <label class="d-block"><input type="checkbox" name="listing[categories]" value="tropical"> Tropical</label>
+              <label class="d-block"><input type="checkbox" name="listing[categories]" value="adapted"> Adapted</label>
+              <label class="d-block"><input type="checkbox" name="listing[categories]" value="houseboats"> Houseboats</label>
+              <label class="d-block"><input type="checkbox" name="listing[categories]" value="arctic"> Arctic</label>
+              <label class="d-block"><input type="checkbox" name="listing[categories]" value="igloo"> Igloo</label>
+            </div>
+          </div>
+        </div>
+      </div>
+      <button type="submit" class="btn btn-dark add-btn my-3">Update</button>
     </form>
 
   </div>
