--- a/views/includes/navbar/navSearch.ejs
+++ b/views/includes/navbar/navSearch.ejs
@@ -1,18 +1,17 @@
 <div class="src-bar w-100 m-auto">
   <form action="/listings/search" method="GET" role="search" class="src w-100 h-100 d-flex flex-row" >
-    <input name="region" class="src-options h-100 w-100" type="search" list="datalistOptions" id="exampleDataList" placeholder="Search destinations" list="regions">
-    <datalist id="datalistOptions">
-      <option value="Europe">
-      <option value="North America">
-      <option value="Southeast Asia">
-      <option value="East Asia">
-      <option value="South America">
-      <option value="Middle East">
-    </datalist>
+    <select name="region" class="src-options h-100 w-100">
+      <option value="" disabled selected>Select a region</option>
+      <option value="Europe">Europe</option>
+      <option value="North America">North America</option>
+      <option value="Southeast Asia">Southeast Asia</option>
+      <option value="East Asia">East Asia</option>
+      <option value="South America">South America</option>
+      <option value="Middle East">Middle East</option>
+    </select>
     <input name="check_in" class="src-options h-100 w-50" type="text" placeholder="Check in" onfocus="(this.type='date')" onblur="(this.type='text')">
     <input name="check_out" class="src-options h-100 w-50" type="text" placeholder="Check out" onfocus="(this.type='date')" onblur="(this.type='text')">
     <input name="guests" class="src-options h-100 w-100" type="text" placeholder="Add guests" >
-    
 
     <button class="btn src-btn px-3 py-2 m-2 border-0 d-flex aling-item-center " type="submit">
         <i class="fa-solid fa-magnifying-glass"></i>
